feat: metadata select options (#22)
